# imv2

./: .clang-tidy  .gitignore  .nvim.lua  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CPPLINT.cfg  LICENSE  README.md  conanfile.txt  devbox.json  vcpkg.json
.github/workflows/: build_linux.yml  build_linux_and_report_warnings.yml  build_macos.yml  build_windows.yml  static_code_checks.yml
doc/: blue_print.md
script/: build.sh  run_cppcheck.sh  run_cppcheck_all.sh  run_cpplint.sh  run_cpplint_all.sh
src/: main.cpp  render_context.cpp  render_context.hpp  window.cpp  window.hpp
src/core/: render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp
